Fix layout issues on Firefox

--- a/src/less/servicesMenu.less
+++ b/src/less/servicesMenu.less
@@ -58,13 +58,13 @@
         }
 
         &__detail {
+            width: max-content; 
             display: flex;
             align-items: center;
             justify-content: space-between;
         }
 
         &__select-icon {
-            align-self: flex-end;
             transition: all linear 150ms;
         }
         
